[tool.poetry]
name = "data-transformation-library-jmarci"
version = "0.1.12"
description = "Data Transformation Library"
authors = ["Julius <j.marciulynas@gmail.com>"]
readme = "README.md"
packages = [{include = "data_transformation_library"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
